# backup-script

./: .rsync-filter-example  CHANGELOG.md  Makefile  README.md  TODO.md  backup.py  example-config.scarab.yml  pyproject.toml  scarab-backup.code-workspace  scarab.sh  test_copytree.py  welcome-art.txt
app/: __init__.py  config.py  controller.py  controllers.py  exceptions.py  globals.py  init.py  interactions.py  io.py  locations.py  main.py  output.py  records.py  source.py
app/controllers/: base.py
app/services/: backup.py
app/templates/: backup_params.jinja2  base.jinja2  dest_contents.jinja2  input_prompt.jinja2  select_backup_mode.jinja2  select_directory.jinja2  select_target_directory.jinja2  select_target_name.jinja2  target_contents.jinja2
assets/: example-config.scarab.yml  scarab.sh
config/: scarab.yml
tests/: backup_test.py  config_test.py  conftest.py  controller_test.py  main_test.py  source_test.py  transfer_test.py
tests/controllers/: base_test.py
tests/services/: backup_test.py
