[tool.poetry]
name = "scarab-backup"
version = "0.1.0"
description = "A CLI-utility to run backups to external drives manually"
authors = ["Podolski, Malte <malte.podolski@web.de>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
cement = "^3.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
