[tool.poetry]
name = "scarab-backup"
version = "0.1.0"
description = "A CLI-utility to run backups to external drives manually"
authors = ["Podolski, Malte <malte.podolski@web.de>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
cement = { extras = ["colorlog", "yaml"], version = "^3.0.8" }
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
isort = "^5.12.0"
typing-extensions = "^4.7.1"

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "true"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = "it_*"
tmp_path_retention_policy = "none"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
